BUG#22310 dead/deceptive code in FileLogHandler::writeFooter() and File_class::flush

make the File_class::flush() method actually flush the stdio buffers.


ndb/src/common/logger/FileLogHandler.cpp:
  remove misleading comment
ndb/src/common/util/File.cpp:
  actually flush the stdio buffers.
  
  remove unneeded // private comment